<resources>
    <string name="app_name">Notes</string>
    <string name="type_here_hint">Type here…</string>
    <string name="description_image_view_add_note">Add note</string>
    <string name="app_description">Thoughts, ideas and plans. Write everything you need and keep\nin one place</string>
    <string name="get_started">get started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="get_started_image_description">Get started image</string>
    <string name="create_account_button_text">Create account</string>
    <string name="app_description_land">Notes is the world’s safest, largest and \n intelligent digital notebook.</string>
    <string name="create_account_text">Create account</string>
    <string name="create_account_description">Write down your thoughts right now.\nJoin Notes. It\'s free</string>
    <string name="create_account_description2">Join Notes for free. Create and share\nunlimited notes with your friends.</string>
    <string name="nickname_label">Nickname</string>
    <string name="type_hint">Type…</string>
    <string name="email_address_label">Email address</string>
    <string name="password_label">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_in_description">Welcome back! Can\'t wait for you \n to make new notes</string>
    <string name="dont_have_an_account">Don\'t have an account? <font color="#FF1976D2">Create it</font></string>
    <string name="create_it">Create it</string>
    <string name="search_bar_description">Search notes</string>
    <string name="search_bar_hint">Search notes</string>
    <string name="fab_content_description">Add new note</string>
    <string name="more_title">More</string>
    <string name="done_item_title">Done</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="save_note_button_description">Save note</string>
    <string name="new_note_title">New note</string>
    <string name="edit_note_description">Edit note</string>
    <string name="lorem_ipsum">Discover a treasure trove of wisdom within this insightful piece, highly respected in the nurturing DEV Community environment. Developers, whether novice or expert, are encouraged to participate and add to our shared knowledge basin. A simple thank you can illuminate someone\'s day. Express your appreciation in the comments section! On DEV, sharing ideas smoothens our journey and strengthens our community ties. Learn something useful? Offering a quick thanks to the author is deeply appreciated.</string>
</resources>