<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/cancel_button_description"
                android:src="@drawable/ic_back_48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/back_button"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="@id/back_button" />

            <ImageView
                android:id="@+id/edit_note"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/edit_note_description"
                android:src="@drawable/ic_edit_48"
                app:layout_constraintBottom_toTopOf="@id/note_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/save_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:contentDescription="@string/save_note_button_description"
                android:src="@drawable/ic_done_48"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/note_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/note_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button"
                tools:text="22.11.2011" />

            <!--            <ImageView-->
            <!--                android:id="@+id/save_note_button"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="15dp"-->
            <!--                android:layout_marginEnd="10dp"-->
            <!--                android:clickable="true"-->
            <!--                android:contentDescription="@string/save_note_button_description"-->
            <!--                android:src="@drawable/ic_done_48"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/note_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_date"
                app:layout_constraintWidth_max="488dp"
                tools:text="@string/lorem_ipsum" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>