<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/create_account_g4"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="Create a free account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/create_account_g12"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g11" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="Join Notes for free. Create and share\nunlimited notes with your friends."
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/create_account_g14"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g13" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="@id/create_account_g6"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g5"
        app:layout_constraintWidth_max="320dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeTextType="uniform"
            android:text="Nickname" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:autofillHints="username"
            android:hint="Type..."
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/nickname_layout"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:hintEnabled="false"-->
        <!--            style="@style/Widget.Material3.TextInputLayout.FilledBox"-->
        <!--            app:errorEnabled="true"-->
        <!--            android:minHeight="48dp">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/nickname"-->
        <!--                android:maxLines="1"-->
        <!--                android:hint="Bebe Boba"-->
        <!--                android:gravity="start"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:inputType="textPersonName"-->

        <!--                android:autofillHints="username"/>-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeTextType="uniform"
            android:text="Email address" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:autofillHints="emailAddress"
            android:hint="Type..."
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeTextType="uniform"
            android:text="Password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="Type..."
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeTextType="uniform"
        android:text="@string/create_account_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/create_account_g8"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g7"
        app:layout_constraintWidth_max="320dp" />

    <TextView
        android:id="@+id/already_have_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/create_account_g10"
        app:layout_constraintEnd_toEndOf="@id/create_account_g2"
        app:layout_constraintStart_toStartOf="@id/create_account_g1"
        app:layout_constraintTop_toTopOf="@id/create_account_g9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0747" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0209" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.051" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3072" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6876" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7987" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8954" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9216" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.132" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1752" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1817" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_g14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2392" />

</androidx.constraintlayout.widget.ConstraintLayout>